--- a/components/common/Countdown/Countdown.module.scss
+++ b/components/common/Countdown/Countdown.module.scss
@@ -8,6 +8,7 @@
   grid-template-columns: repeat(4, auto);
   gap: 1.125rem;
   position: relative;
+  overflow: hidden;
 }
 
 .timer__item {
