--- a/components/ui/Button/Button.module.scss
+++ b/components/ui/Button/Button.module.scss
@@ -167,11 +167,11 @@ $variants: default, primary, 'transparent', minimal, minimal-bright,
 }
 
 .button-icon-left {
-  margin-right: 1.25em;
+  margin-right: 1em;
 }
 
 .button-icon-right {
-  margin-left: 1.25em;
+  margin-left: 1em;
 }
 
 .stretched {
